--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="hero-nav nav-bar">
+        <nav class="container nav-bar">
             <div class="logo">
                 <img src="Images/Group 40071 (2).png" alt="">
                 <h3>Hero <span id="span">Travel</span></h3>
@@ -24,13 +24,98 @@
                 
             </ul>
         </div>
+        <div class="ham-burger"><i class="fa-solid fa-bars"></i></div>
         </nav>
     </header>
     <main>
+         <section class="container section-container">
+            <div class="explore-container">
+                <h3>Explore Your Travel</h3>
+                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+                <div class="travel-input">
+                    <input type="text" name="" id="" placeholder="Where go">
+                    <select name="" id="">
+                        <option value="">When</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Select type</option>
+                    </select>
+                    <button class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
 
+                </div>
+            </div>
+         </section>
+         <section class="container popular-section">
+            <div class="text-content">
+                <h3>Our Popular Tours</h3>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <ul>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li><br>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li><br>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus 
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                    <button class="btn-primary">Read More</button>
+
+            </div>
+            <div class="image-content">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+         </section>
+
+         <section class="container your-destination">
+            <h3>Choose Your Destination</h3>
+            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+
+            <div class="row-1">
+                <div class="country-card">
+                    <img src="Images/Rectangle 5.png" alt=""><p class="country">Maldives</p>
+                </div>
+                <div class="country-card">
+                    <img src="Images/Rectangle 8.png" alt=""><p class="country">Indonesia</p>
+                </div>
+            </div>
+            <div class="row-2">
+                <div class="country-card">
+                    <img src="Images/Rectangle 6.png" alt=""><p class="country">Srilanka</p>
+                </div>
+                <div class="country-card">
+                    <img src="Images/Rectangle 7.png" alt=""><p class="country">North America</p>
+                </div>
+                <div class="country-card">
+                    <img src="Images/Rectangle 9.png" alt=""><p class="country">Kashmir</p>
+                </div>
+
+            </div>
+            <div class="row-3">
+                <div class="country-card">
+                    <img src="Images/Rectangle 11.png" alt=""><p class="country">Bangladesh</p>
+                </div>
+                <div class="country-card">
+                    <img src="Images/Rectangle 10.png" alt=""><p class="country">Bandarban</p>
+                </div>
+            </div>
+
+         </section>
     </main>
-    <footer>
+    <footer class="footer-section">
+        <div class="container">
+        <div class="logo">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h3>Hero <span id="span">Travel</span></h3>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+        <div class="social">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
 
+        </div>
+        <hr>
+        <p>&copy; 2017, All Rights Reserved.</p>
+    </div>
     </footer>
     
 </body>
