--- a/index.html
+++ b/index.html
@@ -98,6 +98,58 @@
             </div>
 
          </section>
+         <section class="container choose-us-section" >
+            <h3>Why Choose Us</h3>
+            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <div class="choose-us-content">
+                <div id="color-1" class="hotels">
+                    <img src="Images/hotel.png" alt="">
+                    <h4>Handpicked Hotels</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare
+                        nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                        Habitant adipiscing risus natoque aliquet.</p>
+                </div>
+                <div id="color-2" class="service">
+                    <img src="Images/map.png" alt="">
+                    <h4>World Class Service</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare
+                        nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                        Habitant adipiscing risus natoque aliquet.</p>
+                </div>
+
+                <div id="color-3" class="best-price">
+                    <img src="Images/increase.png" alt="">
+                    <h4>Best Price Guarantee</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare
+                        nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                        Habitant adipiscing risus natoque aliquet.</p>
+                </div>
+            </div>
+
+         </section>
+         <section class=" container news-section">
+            <div class="news-content">
+                <h3>Newsletter</h3>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <div class="input-news">
+                <input type="text" name="" id="" placeholder="Enter your name"> 
+                <input type="email" name="" id="" placeholder=" Enter your email">
+                <button class="btn-second">Subscribe</button>
+            </div>
+            </div>
+            <div class="news-image">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div class="text-overlay">
+                    <p>Travel.com</p>
+                    <h3>Save up to 70%</h3>
+                </div>
+                </div>
+            </div>
+
+
+         </section>
+
     </main>
     <footer class="footer-section">
         <div class="container">
