--- a/index.html
+++ b/index.html
@@ -127,6 +127,76 @@
             </div>
 
          </section>
+         <section class="container deals-section">
+             <h3>Deals & Discounts</h3>
+             <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.<br>Sodales dictumst nec nibh pellentesque.</p>
+             <div class="deals-content">
+                <div class="deals-tour">
+
+                </div>
+                <div class="satorini">
+                    <span class="span-font"> <i class="fa-solid fa-calendar-days"></i> 7 Day / 6 Night</span>
+                    <span class="span-font"><i class="fa-solid fa-maximize"></i> Max: 10</span>
+                    <span class="span-font"><i class="fa-solid fa-location-dot"></i> Malaysia</span>
+                    <div class="text-tour">
+                    <h4>Tour To Satorini</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <span class="text-price">Price: $1300-$1500</span>
+
+                    <button class="btn-third">Book Now</button>
+                </div>
+
+                </div>
+
+             </div>
+             <div class="deals-content-1">
+               
+                <div class="satorini">
+                    <span class="span-font"> <i class="fa-solid fa-calendar-days"></i> 7 Day / 6 Night</span>
+                    <span class="span-font"><i class="fa-solid fa-maximize"></i> Max: 10</span>
+                    <span class="span-font"><i class="fa-solid fa-location-dot"></i> Malaysia</span>
+                    <div class="text-tour">
+                    <h4>Tour To Satorini</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <span class="text-price">Price: $1300-$1500</span>
+
+                    <button class="btn-third">Book Now</button>
+                </div>
+
+                </div>
+                <div class="deals-tour">
+
+                </div>
+
+             </div>
+             <div class="deals-content">
+                <div class="deals-tour">
+
+                </div>
+                <div class="satorini">
+                    <span class="span-font"> <i class="fa-solid fa-calendar-days"></i> 7 Day / 6 Night</span>
+                    <span class="span-font"><i class="fa-solid fa-maximize"></i> Max: 10</span>
+                    <span class="span-font"><i class="fa-solid fa-location-dot"></i> Malaysia</span>
+                    <div class="text-tour">
+                    <h4>Tour To Satorini</h4>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <span class="text-price">Price: $1300-$1500</span>
+
+                    <button class="btn-third">Book Now</button>
+                </div>
+
+                </div>
+
+             </div>
+
+             <div class="btn-packages">
+                <button class="btn-primary">See All Packages</button>
+             </div>
+
+
+
+
+         </section>
          <section class=" container news-section">
             <div class="news-content">
                 <h3>Newsletter</h3>
